crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__nameof-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"nameof nameof variable\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Nameof(
                            (
                                "nameof",
                                0..6,
                            ),
                            (
                                Nameof(
                                    (
                                        "nameof",
                                        7..13,
                                    ),
                                    (
                                        Var(
                                            (
                                                "variable",
                                                14..22,
                                            ),
                                        ),
                                        14..22,
                                    ),
                                ),
                                14..22,
                            ),
                        ),
                        14..22,
                    ),
                ),
                0..22,
            ),
        ),
        0..22,
    ),
]
