crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__nameof.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"nameof variable\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Nameof(
                            (
                                "nameof",
                                0..6,
                            ),
                            (
                                Var(
                                    (
                                        "variable",
                                        7..15,
                                    ),
                                ),
                                7..15,
                            ),
                        ),
                        7..15,
                    ),
                ),
                0..15,
            ),
        ),
        0..15,
    ),
]
