crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__neg-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"-(1 - 2)\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                "-",
                                0..1,
                            ),
                            (
                                Parentheses(
                                    (
                                        Subtract(
                                            (
                                                Number(
                                                    (
                                                        1.0,
                                                        2..3,
                                                    ),
                                                ),
                                                2..3,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        6..7,
                                                    ),
                                                ),
                                                6..7,
                                            ),
                                        ),
                                        2..7,
                                    ),
                                ),
                                1..8,
                            ),
                        ),
                        1..8,
                    ),
                ),
                0..8,
            ),
        ),
        0..8,
    ),
]
