crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__neg.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"-(1)\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                "-",
                                0..1,
                            ),
                            (
                                Parentheses(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                2..3,
                                            ),
                                        ),
                                        2..3,
                                    ),
                                ),
                                1..4,
                            ),
                        ),
                        1..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
