crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__neq-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 != 2 + 1 + 5\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neq(
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                4..5,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Add(
                                    (
                                        Add(
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        9..10,
                                                    ),
                                                ),
                                                9..10,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        1.0,
                                                        13..14,
                                                    ),
                                                ),
                                                13..14,
                                            ),
                                        ),
                                        9..14,
                                    ),
                                    (
                                        Number(
                                            (
                                                5.0,
                                                17..18,
                                            ),
                                        ),
                                        17..18,
                                    ),
                                ),
                                9..18,
                            ),
                        ),
                        0..18,
                    ),
                ),
                0..18,
            ),
        ),
        0..18,
    ),
]
