crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__neq.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 != 2\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neq(
                            (
                                Number(
                                    (
                                        1.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        5..6,
                                    ),
                                ),
                                5..6,
                            ),
                        ),
                        0..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
