crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__not.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"not true\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Not(
                            (
                                "not",
                                0..3,
                            ),
                            (
                                Boolean(
                                    (
                                        true,
                                        4..8,
                                    ),
                                ),
                                4..8,
                            ),
                        ),
                        4..8,
                    ),
                ),
                0..8,
            ),
        ),
        0..8,
    ),
]
