crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__null.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"null\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Null,
                        0..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
