crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__number-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\".23\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                0.23,
                                0..3,
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ),
        0..3,
    ),
]
